--- a/CaseInstaller/Views/TrueManagementInstall.xaml
+++ b/CaseInstaller/Views/TrueManagementInstall.xaml
@@ -7,7 +7,9 @@
              mc:Ignorable="d" 
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <Grid>
-            
+    <Grid Background="Aqua">
+        
+        <Button Content="Bind"/>
+
     </Grid>
 </UserControl>
