--- a/CaseInstaller/Views/MainWindow.xaml
+++ b/CaseInstaller/Views/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="CaseInstaller.View.MainWindow"
+﻿<Window x:Class="CaseInstaller.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:CaseInstaller.View"
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
+        Title="{Binding Title}" Height="350" Width="525"
        >
-    <Grid>
+    <DockPanel LastChildFill="True">
         <ContentControl prism:RegionManager.RegionName="ContentRegion" />
-    </Grid>
+    </DockPanel>
 </Window>
