--- a/CaseInstaller/Views/MainWindow.xaml
+++ b/CaseInstaller/Views/MainWindow.xaml
@@ -6,6 +6,10 @@
         Title="{Binding Title}" Height="350" Width="525"
        >
     <DockPanel LastChildFill="True">
+        <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Margin="5" >
+            <Button Command="{Binding NavigateCommand}" CommandParameter="TrueManagementInstall" Margin="5">TrueManagementInstall</Button>
+            <Button Command="{Binding NavigateCommand}" CommandParameter="TrueManagementSetting" Margin="5">TrueManagementSetting</Button>
+        </StackPanel>
         <ContentControl prism:RegionManager.RegionName="ContentRegion" />
     </DockPanel>
 </Window>
