--- a/CaseInstaller/Views/TrueManagementInstall.xaml
+++ b/CaseInstaller/Views/TrueManagementInstall.xaml
@@ -8,8 +8,8 @@
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid Background="Aqua">
-        
-        <Button Content="Bind"/>
-
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Button Content="Install" Margin="5"/>
+        </StackPanel>
     </Grid>
 </UserControl>
