--- a/CaseInstaller/Views/TrueManagementSetting.xaml
+++ b/CaseInstaller/Views/TrueManagementSetting.xaml
@@ -7,7 +7,9 @@
              mc:Ignorable="d" 
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <Grid>
-            
+    <Grid Background="Aquamarine">
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Button Content="Settings" Margin="5"/>
+        </StackPanel>
     </Grid>
 </UserControl>
