--- a/CaseInstaller/Views/MainWindow.xaml
+++ b/CaseInstaller/Views/MainWindow.xaml
@@ -1,15 +1,20 @@
 ﻿<Window x:Class="CaseInstaller.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:prism="http://prismlibrary.com/"
+        xmlns:prism="http://prismlibrary.com/" 
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         prism:ViewModelLocator.AutoWireViewModel="True"
         Title="{Binding Title}" Height="350" Width="525"
        >
     <DockPanel LastChildFill="True">
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Margin="5" >
-            <Button Command="{Binding NavigateCommand}" CommandParameter="TrueManagementInstall" Margin="5" >TrueManagementInstall</Button>
-            <Button Command="{Binding NavigateCommand}" CommandParameter="TrueManagementSetting" Margin="5">TrueManagementSetting</Button>
+            <Label Content="TrueManagement"/>
         </StackPanel>
         <ContentControl prism:RegionManager.RegionName="ContentRegion" />
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="Loaded">
+                <i:InvokeCommandAction Command="{Binding WindowLoadCommand}" />
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
     </DockPanel>
 </Window>
