--- a/CaseInstaller/Views/TrueManagementInstall.xaml
+++ b/CaseInstaller/Views/TrueManagementInstall.xaml
@@ -9,7 +9,7 @@
              prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Button Content="Install" Margin="5" Command="{Binding GoBackCommand}"/>
+            <Button Content="Install" Margin="5" Command="{Binding InstallCommand}" CommandParameter="TrueManagementOptions"/>
         </StackPanel>
     </Grid>
 </UserControl>
