--- a/CaseInstaller/Views/TrueManagementSetting.xaml
+++ b/CaseInstaller/Views/TrueManagementSetting.xaml
@@ -9,8 +9,8 @@
              prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid >
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Button Content="Update" Margin="5"/>
-            <Button Content="Modify" Margin="5"/>
+            <Button Content="Update" Margin="5" />
+            <Button Content="Modify" Margin="5"  Command="{Binding ModifyCommand}" CommandParameter="TrueManagementOptions"/>
             <Button Content="Uninstall" Margin="5"/>
         </StackPanel>
     </Grid>
