--- a/CaseInstaller/Views/TrueManagementSetting.xaml
+++ b/CaseInstaller/Views/TrueManagementSetting.xaml
@@ -11,7 +11,8 @@
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
             <Button Content="Update" Margin="5" Command="{Binding GoForwardCommand}"/>
             <Button Content="Modify" Margin="5"  Command="{Binding ModifyCommand}" CommandParameter="TrueManagementOptions"/>
-            <Button Content="Uninstall" Command="{Binding UninstallCommand}" Margin="5" />
+            <Button Content="Uninstall" Command="{Binding UninstallCommand}" CommandParameter="TrueManagementFinal" Margin="5" />
         </StackPanel>
+        
     </Grid>
 </UserControl>
